<resources>
    <string name="app_name">ArtWolf</string>
    <string name="appId">ca-app-pub-6418178360564076~9611371496</string>

    <string name="title_banner_ad_id" translatable="false">ca-app-pub-6418178360564076/7166707379</string>
    <string name="retry_inter_ad_id" translatable="false">ca-app-pub-6418178360564076/7663926046</string>
    <string name="retryFragmentBannerId">ca-app-pub-6418178360564076/5180601073</string>
    <string name="editThemeSelectFragmentBannerAdId" translatable="false">ca-app-pub-6418178360564076/3743019021</string>
    <string name="fragment_settings_banner_id" translatable="false">ca-app-pub-6418178360564076/4013359606</string>

    <string name="artist">Painter</string>
    <string name="wolf">Impostor</string>

    <string name="normal_end_chars">.</string>
    <string name="respected_end_chars">.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Redo">Redo</string>
    <string name="Undo">Undo</string>
    <string name="change_to_next">Next: </string>
    <string name="playerNumber">Player number</string>
    <string name="finish">Finish</string>
    <string name="change_to">Next:%1$s</string>
    <string name="player">Player</string>
    <string name="default_">Default_</string>
    <string name="you_are_an">You are a(n) </string>
    <string name="you_are_x">You are a(n) "%1$s".</string>
    <string name="check">Check</string>
    <string name="are_you">Are you \n%1$s?</string>
    <string name="yes">YES</string>
    <string name="ok" translatable="false">OK</string>
    <string name="you_must_choose_person">You must choose a person.</string>
    <string name="artist_detail">You draw a picture of %1$s, but don\'t tell the impostor that.</string>
    <string name="wolf_detail">You don\'t know what to draw, so suggest it and pretend to know it.</string>
    <string name="Done">Done</string>
    <string name="winner_is">Winner is</string>
    <string name="winnerAct">%1$s!</string>
    <string name="reversalRule">But…,if the impostor can answer the correct theme, he/she wins.</string>
    <string name="did_wolf_answer_correct_theme">Did impostor answer correct theme?</string>
    <string name="the_theme_is">The theme is</string>
    <string name="themeShow">%1$s.</string>
    <string name="complete">complete</string>
    <string name="retry">Retry</string>
    <string name="edit">edit</string>
    <string name="random">random</string>
    <string name="please_choose_theme_mode">Please choose theme mode</string>
    <string name="theme">theme</string>
    <string name="please_fill_in_theme_field">Please fill in theme field</string>
    <string name="is_drawing">%1$s is drawing</string>
    <string name="start">start</string>
    <string name="now_it_s_time_to_talking">Now, it\'s time to talk about who impostor is.</string>
    <string name="settings">Settings</string>
    <string name="sound_effect">Sound effect</string>
    <string name="bgm">BGM</string>
    <string name="back_button_is_disabled">Sorry, back button is disabled now</string>

    <string-array name="builtInThemes">
        <item>soccer</item>
        <item>tennis</item>
        <item>basketBall</item>
        <item>nap</item>
        <item>entrance ceremony</item>
        <item>graduation ceremony</item>
        <item>convenience store</item>
        <item>cinema</item>
        <item>library</item>
        <item>fridge</item>
        <item>smart phone</item>
        <item>PC</item>
        <item>fortune telling</item>
        <item>robot</item>
        <item>cartoon</item>
        <item>argument</item>
        <item>date</item>
        <item>gym</item>
        <item>TV</item>
        <item>marathon</item>
        <item>play</item>
        <item>cooking</item>
        <item>reading</item>
        <item>train</item>
        <item>air plane</item>
        <item>calender</item>
        <item>heaven</item>
        <item>hell</item>
        <item>trip</item>
        <item>money</item>
        <item>sports day</item>
        <item>hero</item>
        <item>hospital</item>
        <item>restaurant</item>
        <item>pen case</item>
        <item>flower bed</item>
        <item>park</item>
        <item>letter</item>
        <item>vegetable</item>
        <item>fruit</item>
        <item>wheather</item>
        <item>picture</item>
        <item>phone</item>
        <item>theme park</item>
        <item>zoo</item>
        <item>aquarium</item>
        <item>amusement arcade</item>
        <item>picnic</item>
        <item>piano</item>
        <item>guitar</item>
        <item>Olympic</item>
        <item>snow</item>
        <item>christmas</item>
        <item>pool</item>
        <item>present</item>
        <item>medicine</item>
        <item>weddiing ceremony</item>
        <item>comedy</item>
        <item>millionaire</item>
        <item>bath</item>
        <item>hotel</item>
        <item>clock</item>
        <item>watch</item>
        <item>Statue of liberty</item>
        <item>Eiffel tower</item>
        <item>Leaning Tower of Pisa</item>
        <item>life</item>
        <item>baby</item>
        <item>exam</item>
        <item>fan</item>
        <item>Picasso</item>
        <item>Edison</item>
        <item>broom</item>
        <item>curry</item>
        <item>light</item>
        <item>battery</item>
        <item>pole</item>
        <item>glasses</item>
        <item>writing brush</item>
        <item>thermometer</item>
        <item>honey</item>
        <item>map</item>
        <item>chair</item>
        <item>waterfall</item>
        <item>candy</item>
        <item>socks</item>
        <item>spaghetti</item>
    </string-array>


</resources>
