<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="unifar.unifar.artwolf.RetryFragment">


    <Button
        android:id="@+id/fragment_retry_retry_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/mediumButtonHeight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/retry"
        android:textSize="@dimen/Regular_34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment_retry_finish_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/mediumButtonHeight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/finish"
        android:textSize="@dimen/Regular_34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_retry_retry_button" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/fragment_retry_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:adSize="LARGE_BANNER"
        app:adUnitId="@string/retryFragmentBannerId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_retry_finish_button" />
</android.support.constraint.ConstraintLayout>
